--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.4.15",
     "@nestjs/throttler": "^6.3.0",
+    "@nestjs/websockets": "^10.4.15",
     "@prisma/client": "^6.1.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
